--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
       <script src="https://lingolink.github.io/jwplayer/jwplayer.js"></script>
       <script>jwplayer.key="sBJgcO5acS40wLiZ8OUFr2giw5PfEs013tsyEg==";</script>
+    <meta property="og:url" content="lingolink.com" />
     <meta property="og:type" content="video" />
     <meta property="og:video:height" content="260" />
     <meta property="og:video:width" content="420" />
