--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
       <script src="https://lingolink.github.io/jwplayer/jwplayer.js"></script>
       <script>jwplayer.key="sBJgcO5acS40wLiZ8OUFr2giw5PfEs013tsyEg==";</script>
-    <meta property="og:url" content="http://lingolink.tk" />
+      
+    <meta property="og:url" content="http://www.labianlabs.com/test/player.html" />
+<!--
     <meta property="og:type" content="video" />
     <meta property="og:video:height" content="260" />
     <meta property="og:video:width" content="420" />
@@ -11,14 +13,17 @@
     <meta property="og:description" content="Im rachel." />
     <meta property="og:image" content="https://assets-jpcust.jwpsrv.com/thumbs/pd1I78Dz-720.jpg" />
     <meta property="og:video" content="https://lingolink.github.io/jwplayer/jwplayer.flash.swf" />
+-->
   </head>
   <body>
   <div id="myElement"></div>
+<!--
   <script type="text/JavaScript">
       var playerInstance = jwplayer("myElement");
       playerInstance.setup({
           file: "https://dl.dropboxusercontent.com/s/s2a0jdvrucaoznu/uaWhoKMHRxI.mp4"
       });
   </script>
+-->
   </body>
 </html>
