--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
-<html>
-  <head>
-      <script src="https://lingolink.github.io/jwplayer/jwplayer.js"></script>
-      <script>jwplayer.key="sBJgcO5acS40wLiZ8OUFr2giw5PfEs013tsyEg==";</script>
-      
-    <meta property="og:url" content="http://www.labianlabs.com/test/player.html" />
-<!--
-    <meta property="og:type" content="video" />
-    <meta property="og:video:height" content="260" />
-    <meta property="og:video:width" content="420" />
+<!doctype html>
+<html xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+<head> 
+<!-- open graph meta properties -->
+  <meta property="og:url" content="https://lingolink.github.io" />
+    <meta property="og:site_name" content="Flowplayer" />
+    <meta property="og:type" content="movie" />
+    <meta property="og:title" content="Sharing plugin custom configured" />
+    <meta property="og:description" content="The Sharing plugin in a custom configuration" />
+    <meta property="og:video:height" content="360" />
+    <meta property="og:video:width" content="640" />
+    <meta property="og:image" content="http://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
+    <meta property="og:image:secure_url" content="https://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:title" content="Big Buck Bunny" />
-    <meta property="og:description" content="Im rachel." />
-    <meta property="og:image" content="https://assets-jpcust.jwpsrv.com/thumbs/pd1I78Dz-720.jpg" />
-    <meta property="og:video" content="https://lingolink.github.io/jwplayer/jwplayer.flash.swf" />
--->
-  </head>
-  <body>
-  <div id="myElement"></div>
-<!--
-  <script type="text/JavaScript">
-      var playerInstance = jwplayer("myElement");
-      playerInstance.setup({
-          file: "https://dl.dropboxusercontent.com/s/s2a0jdvrucaoznu/uaWhoKMHRxI.mp4"
-      });
-  </script>
--->
-  </body>
-</html>
+    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=http%3A%2F%2Flingolink.github.io%2Fjw.js" />
+    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fjw.js" />
+    
+</head>
