--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="http://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:image:secure_url" content="https://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=http%3A%2F%2Flingolink.github.io%2Fcfg.js" />
-    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fcfg.js" />
+    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Fdl.dropboxusercontent.com%2Fs%2F32zjrv20u76il80%2FNatureIsSpeakingMotherNature-01.mp4" />
+    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Fdl.dropboxusercontent.com%2Fs%2F32zjrv20u76il80%2FNatureIsSpeakingMotherNature-01.mp4" />
     
 </head>
