--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head> 
+<script src="http://lingolink.github.io/flowplayer/flowplayer-3.2.13.min.js"></script>
 <!-- open graph meta properties -->
   <meta property="og:url" content="https://lingolink.github.io" />
     <meta property="og:site_name" content="Flowplayer" />
