--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script>
   flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
+	  		url:"https://dl.dropboxusercontent.com/s/32zjrv20u76il80/NatureIsSpeakingMotherNature-01.mp4",
 		  autoPlay: false,
           autoBuffering: true,
 		  onStart:function(clip){
