--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           autoBuffering: true,
 		  onStart:function(clip){
 		  	  alert("clip started");
+		  	  $f().play("http://stream.flowplayer.org/Extremists.flv");
 		  }
 	  },
       onLoad: function() { // called when player has finished loading
