--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <script>
   flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
-	  		url:"https://dl.dropboxusercontent.com/s/32zjrv20u76il80/NatureIsSpeakingMotherNature-01.mp4",
+	  		url:"http://stream.flowplayer.org/Extremists.flv",
 		  autoPlay: false,
           autoBuffering: true,
 		  onStart:function(clip){
-		  	  $f().play("http://stream.flowplayer.org/Extremists.flv");
+		  	  $f().play("https://dl.dropboxusercontent.com/s/32zjrv20u76il80/NatureIsSpeakingMotherNature-01.mp4");
 		  }
 	  },
       onLoad: function() { // called when player has finished loading
