--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <script>
   flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
-	  		url:"http://stream.flowplayer.org/Extremists.flv",
+	  		url:"http://dl.dropboxusercontent.com/s/h8xkr0ozfglesey/LhCntVmIJ3A.mp4",
 		  autoPlay: false,
           autoBuffering: true,
 		  onStart:function(clip){
-		  	  $f().play("https://dl.dropboxusercontent.com/s/32zjrv20u76il80/NatureIsSpeakingMotherNature-01.mp4");
+		  	  $f().resume().play("https://dl.dropboxusercontent.com/s/32zjrv20u76il80/NatureIsSpeakingMotherNature-01.mp4");
 		  }
 	  },
       onLoad: function() { // called when player has finished loading
