--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 <script>
   flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
-	  		url:"http://dl.dropboxusercontent.com/s/h8xkr0ozfglesey/LhCntVmIJ3A.mp4",
-		  autoPlay: false,
-          autoBuffering: true,
-		  onStart:function(clip){
-		  	  $f().resume().play("http://dl.dropboxusercontent.com/s/9pvvki84sx5y96h/VxkTvAcIEMU.mp4");
-		  }
+	  		url:"http://drive.google.com/uc?export=download&id=0B1iyJyrtPA9aUjE4bmR2UHdSLTA&format=video/mp4",
 	  },
       onLoad: function() { // called when player has finished loading
           this.setVolume(30); // set volume property
