--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="http://lingolink.github.io/flowplayer/flowplayer-3.2.13.min.js"></script>
 <!-- open graph meta properties -->
   <meta property="og:url" content="https://lingolink.github.io" />
-    <meta property="og:site_name" content="Flowplayer" />
+    <meta property="og:site_name" content="Lingo" />
     <meta property="og:type" content="movie" />
     <meta property="og:title" content="Sharing plugin custom configured" />
     <meta property="og:description" content="The Sharing plugin in a custom configuration" />
@@ -13,18 +13,56 @@
     <meta property="og:image" content="http://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:image:secure_url" content="https://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Faaa.js" />
-    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Faaa.js" />
-    
+    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fconfig.js" />
+    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fconfig.js" />
 </head>
 <div id="player" style="display:block;width:640px;height:320px;"></div>
 <script>
   flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
-	  		url:"http://drive.google.com/uc?export=download&id=0B1iyJyrtPA9aUjE4bmR2UHdSLTA&format=video/mp4",
+	  		url:"https://drive.google.com/uc?export=download&id=0B1iyJyrtPA9aek94ckIxZDVvczg",
 	  },
-      onLoad: function() { // called when player has finished loading
-          this.setVolume(30); // set volume property
+      showErrors:false,
+      plugins: {
+        controls: {
+          url: 'flowplayer.controls-3.2.16.swf',
+          play: true,
+          volume: false,
+          mute: false,
+          time: true,
+          stop: true,
+          playlist: false,
+          fullscreen: false,
+          autoHide: 'true',
+          backgroundColor: '#222222',
+          sliderBorder: '1px solid rgba(128, 128, 128, 0.7)',
+          callType: 'default',
+          bufferGradient: 'none',
+          timeSeparator: ' ',
+          progressGradient: 'none',
+          timeBorder: '0px solid rgba(0, 0, 0, 0.3)',
+          sliderGradient: 'none',
+          buttonOffColor: 'rgba(130,130,130,1)',
+          buttonColor: '#ffffff',
+          volumeSliderGradient: 'none',
+          progressColor: '#112233',
+          backgroundGradient: 'none',
+          sliderColor: '#000000',
+          volumeBorder: '1px solid rgba(128, 128, 128, 0.7)',
+          volumeColor: '#ffffff',
+          tooltipColor: '#000000',
+          bufferColor: '#445566',
+          timeBgColor: 'rgb(0, 0, 0, 0)',
+          volumeSliderColor: '#ffffff',
+          disabledWidgetColor: '#555555',
+          timeColor: '#ffffff',
+          borderRadius: '0px',
+          tooltipTextColor: '#ffffff',
+          durationColor: '#a3a3a3',
+          buttonOverColor: '#ffffff',
+          height: 24,
+          opacity: 1.0
+        }
       }
   });
 </script>
