--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:image" content="http://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:image:secure_url" content="https://d12zt1n3pd4xhr.cloudfront.net/fp/img/flow_eye.jpg" />
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fconfig.js" />
-    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fconfig.js" />
+    <meta property="og:video" content="http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fa.js" />
+    <meta property="og:video:secure_url" content="https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf?config=https%3A%2F%2Flingolink.github.io%2Fa.js" />
 </head>
 <div id="player" style="display:block;width:640px;height:320px;"></div>
 <script>
