--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head> 
-<script src="http://lingolink.github.io/flowplayer/flowplayer-3.2.13.min.js"></script>
+<script src="https://lingolink.github.io/flowplayer/flowplayer-3.2.13.min.js"></script>
 <!-- open graph meta properties -->
   <meta property="og:url" content="https://lingolink.github.io" />
     <meta property="og:site_name" content="Lingo" />
@@ -18,7 +18,7 @@
 </head>
 <div id="player" style="display:block;width:640px;height:320px;"></div>
 <script>
-  flowplayer("player", "http://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
+  flowplayer("player", "https://lingolink.github.io/flowplayer/flowplayer-3.2.18.swf", {
 	  clip:{
 	  		url:"https://drive.google.com/uc?export=download&id=0B1iyJyrtPA9aek94ckIxZDVvczg",
 	  },
@@ -30,7 +30,7 @@
           volume: false,
           mute: false,
           time: true,
-          stop: true,
+          stop: false,
           playlist: false,
           fullscreen: false,
           autoHide: 'true',
